[package]
name = "rluaterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.19.4"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.1.7"
cumulus = { git = "https://github.com/kalkafox/Cumulus.git", branch = "main" }